# chrome-dinosaur-neat-trainer

./: .gitignore  README.md  pyproject.toml  requirements.txt
rsrc/: config.txt  default_network.nn  default_network_high_score.txt  high_score_midleft.txt  winner.nn  winner_midleft.nn
src/: main.py
